--- a/.jshintrc
+++ b/.jshintrc
@@ -1,16 +1,17 @@
 {
-	"node": true,
-	"esnext": true,
-	"bitwise": false,
-	"curly": false,
-	"eqeqeq": true,
-	"eqnull": true,
-	"immed": true,
-	"latedef": true,
-	"newcap": true,
-	"noarg": true,
-	"undef": true,
-	"strict": false,
-	"trailing": true,
-	"smarttabs": true
+  "node": true,
+  "esnext": true,
+  "bitwise": true,
+  "camelcase": true,
+  "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "indent": 2,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "quotmark": "single",
+  "undef": true,
+  "unused": true,
+  "strict": true
 }
