--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "yeoman-generator": "^0.18.0",
     "chalk": "^0.5.0",
-    "yosay": "^0.3.0"
+    "yosay": "^0.3.0",
+    "cheerio": "^0.18.0",
+    "request": "^2.53.0",
+    "fs": "^0.0.2"
   },
   "devDependencies": {
     "mocha": "*"
